--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my second repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>I can push to github</h1>
     <h2>mama I can coad now</h2>
     <h3>New coad changed</h3>
+    <p>more paragraph</p>
+    <p>I am coding coding coding</p>
 </body>
 </html>
