--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>I can push to github</h1>
+    <h1>I can push to github.com</h1>
     <h2>mama I can coad now</h2>
     <h3>New coad changed</h3>
     <p>more paragraph</p>
     <p>I am coding coding coding</p>
+    <img src="amrela.webp" alt="">
+    <img src="babu.jpg" alt="">
 </body>
 </html>
